2009-01-25  Carsten Dominik  <dominik@science.uva.nl>

	* refcards/orgcard.tex: New year and version number.
	Document heading/item conversion commands.
	Document C-c RET in tables.

2009-01-03  Michael Albinus  <michael.albinus@gmx.de>

	* NEWS: Tramp supports IPv6 addresses.

2008-12-20  Carsten Dominik  <dominik@science.uva.nl>

	* refcards/orgcard.tex: Version number change.

2008-12-19  Eli Zaretskii  <eliz@gnu.org>

	* PROBLEMS (MS-DOS): Document the problems on Vista.

2008-12-17  Carsten Dominik  <dominik@science.uva.nl>

	* refcards/orgcard.tex: Version number change.

2008-12-16  Carsten Dominik  <dominik@science.uva.nl>

	* refcards/orgcard.tex: Version number change.

2008-12-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* MACHINES: SH3 is still supported.

2008-12-07  Carsten Dominik  <dominik@science.uva.nl>

	* refcards/orgcard.tex: Version number update.

2008-11-27  Juanma Barranquero  <lekktu@gmail.com>

	* NEWS: Fix typo.  (Bug#1439)

2008-11-12  Carsten Dominik  <dominik@science.uva.nl>

	* refcards/orgcard.tex: Document the extra yanking key.

2008-11-08  Mark A. Hershberger  <mah@everybody.org>

	* compilation.txt (php): Add regexp for php error messages.

2008-10-24  Juanma Barranquero  <lekktu@gmail.com>

	* NEWS: New function `locate-user-emacs-file'.

2008-10-18  Ulrich Mueller  <ulm@gentoo.org>

	* MACHINES: Add section for SuperH.

2008-10-12  Carsten Dominik  <dominik@science.uva.nl>

	* refcards/orgcard.tex: Add description for attachments, plus
	minor changes.

2008-07-24  Carsten Dominik  <dominik@science.uva.nl>

	* refcards/orgcard.tex: Minor fixes.

2008-09-08  Daiki Ueno  <ueno@unixuser.org>

	* TODO: Remove the entry describing auto-encryption.

2008-08-26  Robert J. Chassell  <bob@rattlesnake.com>

	* PROBLEMS: Prevent pasting a region twice on an xterm or rxvt in X.

2008-08-23  Chong Yidong  <cyd@stupidchicken.com>

	* HELLO: Fix Javanese pun.

2008-08-18  Bill Wohler  <wohler@newt.com>

	Release MH-E version 8.1.
