@@ -1,3 +1,7 @@
+2009-01-27  Kenichi Handa  <handa@m17n.org>
+
+	* NEWS: New function `coding-sytem-from-name'.
+
 2009-01-25  Carsten Dominik  <dominik@science.uva.nl>
 
 	* refcards/orgcard.tex: New year and version number.
